fixed overflow:hidden on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,17 @@
 
 body{
     background: #1b1c22;
+    overflow: hidden;
 }
 
 canvas {
   margin: 0 auto;
 }
 
+
+.wrap{
+    overflow: hidden;
+}
 
 .centered{
     position: absolute;
